apps/2048/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-2048
  namespace: game-2048
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: game-2048
